# our-fintech-backend

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 060311cebf17_initial.py  789d18bb0463_add_categories_table.py  92c6f1e2d227_add_hashed_password_to_users.py
app/: main.py
app/api/: deps.py
app/api/v1/: auth.py  categories.py  router.py
app/core/: config.py  security.py
app/db/: models.py  seed.py  session.py
app/models/: __init__.py  budget.py  category.py  debt.py  transaction.py  user.py
docs/: auth.md  database.md  migrations.md
