[project]
name = "our-fintech-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.128.8",
    "pydantic-settings>=2.11.0",
    "uvicorn[standard]>=0.39.0",
]

[project.scripts]
start = "uvicorn app.main:app --reload"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
