[project]
name = "our-fintech-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "alembic>=1.16.5",
    "fastapi>=0.128.8",
    "pydantic-settings>=2.11.0",
    "sqlmodel>=0.0.34",
    "uvicorn[standard]>=0.39.0",
]

[project.scripts]
start = "uvicorn app.main:app --reload"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
